Updates from Overleaf

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -132,5 +132,6 @@
 	pages = {6},
 	author = {Farrugia, Audrianne and Francalanza, Adrian},
 	langid = {english},
-	file = {Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:C\:\\Users\\Edvard\\Zotero\\storage\\56YDURMC\\Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:application/pdf}
+	file = {Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:C\:\\Users\\Edvard\\Zotero\\storage\\56YDURMC\\Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:application/pdf},
+	date = {2012}
 }
