--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -1,17 +1,4 @@
 
-@inproceedings{ongaro_search_2014,
-	title = {In Search of an Understandable Consensus Algorithm},
-	isbn = {978-1-931971-10-2},
-	url = {https://www.usenix.org/conference/atc14/technical-sessions/presentation/ongaro},
-	eventtitle = {2014 \{{USENIX}\} Annual Technical Conference (\{{USENIX}\} \{{ATC}\} 14)},
-	pages = {305--319},
-	author = {Ongaro, Diego and Ousterhout, John},
-	urldate = {2020-02-22},
-	date = {2014},
-	langid = {english},
-	file = {Full Text PDF:C\:\\Users\\Edvard\\Zotero\\storage\\8QKRA27A\\Ongaro and Ousterhout - 2014 - In Search of an Understandable Consensus Algorithm.pdf:application/pdf}
-}
-
 @article{ongaro_consensus,
 	title = {Consensus: Bridging Theory and Practice},
     date = {2014},
@@ -134,4 +121,40 @@
 	langid = {english},
 	file = {Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:C\:\\Users\\Edvard\\Zotero\\storage\\56YDURMC\\Farrugia and Francalanza - Towards a Formalisation of Erlang Failure and Fail.pdf:application/pdf},
 	date = {2012}
+}
+
+@inproceedings{characterizing_cloud_hardware_rel,
+  title={Characterizing cloud computing hardware reliability},
+  author={Vishwanath, Kashi Venkatesh and Nagappan, Nachiappan},
+  booktitle={Proceedings of the 1st ACM symposium on Cloud computing},
+  pages={193--204},
+  year={2010}
+}
+
+@inproceedings{parallel_vs_distributed,
+  title={Parallel computing vs. distributed computing: a great confusion?(position paper)},
+  author={Raynal, Michel},
+  booktitle={European Conference on Parallel Processing},
+  pages={41--53},
+  year={2015},
+  organization={Springer}
+}
+
+
+@software{ongaro_raftscope_2020,
+	title = {ongardie/raftscope},
+	url = {https://github.com/ongardie/raftscope},
+	abstract = {super hacky visualization of Raft. Contribute to ongardie/raftscope development by creating an account on {GitHub}.},
+	author = {Ongaro, Diego},
+	urldate = {2020-06-11},
+	date = {2020-06-07},
+	note = {original-date: 2014-05-21T09:36:26Z}
+}
+
+@inproceedings{satzger2007_new_accrual_failure,
+  title={A new adaptive accrual failure detector for dependable distributed systems},
+  author={Satzger, Benjamin and Pietzowski, Andreas and Trumler, Wolfgang and Ungerer, Theo},
+  booktitle={Proceedings of the 2007 ACM symposium on Applied computing},
+  pages={551--555},
+  year={2007}
 }
